# duke-sheets

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FUNCTIONS.md  LICENSE  README.md  TODO.md  mise.toml
bindings/: README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/duke_sheets/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_calculation.py  test_cells.py  test_formulas.py  test_workbook.py  test_worksheet.py
bindings/wasm/: Cargo.toml  demo.html
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: wasm.rs
crates/duke-sheets/: Cargo.toml
crates/duke-sheets-chart/: Cargo.toml
crates/duke-sheets-chart/src/: axis.rs  chart.rs  legend.rs  lib.rs  series.rs
crates/duke-sheets-chart/src/types/: mod.rs
crates/duke-sheets-cli/: Cargo.toml
crates/duke-sheets-cli/src/: main.rs
crates/duke-sheets-core/: Cargo.toml
crates/duke-sheets-core/src/: column.rs  comment.rs  conditional_format.rs  error.rs  lib.rs  named_range.rs  range.rs  row.rs  validation.rs  workbook.rs  worksheet.rs
crates/duke-sheets-core/src/cell/: address.rs  mod.rs  storage.rs  value.rs
crates/duke-sheets-core/src/style/: alignment.rs  border.rs  color.rs  fill.rs  font.rs  mod.rs  number_format.rs  pool.rs
crates/duke-sheets-csv/: Cargo.toml
crates/duke-sheets-csv/src/: error.rs  lib.rs  options.rs  reader.rs  writer.rs
crates/duke-sheets-excel-com/: Cargo.toml
crates/duke-sheets-excel-com/examples/: parity_test.rs
crates/duke-sheets-excel-com/src/: bridge.rs  lib.rs  workbook.rs
crates/duke-sheets-ffi/: Cargo.toml
crates/duke-sheets-ffi/src/: cell.rs  error.rs  handles.rs  lib.rs  workbook.rs  worksheet.rs
crates/duke-sheets-formula/: Cargo.toml
crates/duke-sheets-formula/src/: ast.rs  dependency.rs  error.rs  evaluator.rs  lib.rs  parser.rs
crates/duke-sheets-formula/src/functions/: criteria.rs  date.rs  info.rs  logical.rs  lookup.rs  math.rs  mod.rs  statistical.rs  text.rs
crates/duke-sheets-libreoffice/: Cargo.toml
crates/duke-sheets-libreoffice/src/: bridge.rs  error.rs  lib.rs  uno_types.rs  workbook.rs
crates/duke-sheets-libreoffice/tests/: integration.rs
crates/duke-sheets-xls/: Cargo.toml
crates/duke-sheets-xls/src/: error.rs  lib.rs  reader.rs  styles.rs  writer.rs
crates/duke-sheets-xls/src/biff/: mod.rs  parser.rs  records.rs  strings.rs
crates/duke-sheets-xls/tests/: real_files.rs
crates/duke-sheets-xls/tests/e2e/: common.rs  main.rs
crates/duke-sheets-xls/tests/e2e/reading/: data_types.rs  dimensions.rs  merged_cells.rs  mod.rs  styles.rs
crates/duke-sheets-xlsx/: Cargo.toml
crates/duke-sheets-xlsx/src/: error.rs  lib.rs  styles.rs
crates/duke-sheets-xlsx/src/reader/: mod.rs
crates/duke-sheets-xlsx/src/writer/: mod.rs
crates/duke-sheets-xlsx/tests/e2e/: common.rs  main.rs
crates/duke-sheets-xlsx/tests/e2e/reading/: alignment.rs  border_styles.rs  comments.rs  conditional_format.rs  data_types.rs  data_validation.rs  dimensions.rs  fill_styles.rs  font_styles.rs  merged_cells.rs  mod.rs  number_formats.rs
crates/duke-sheets/examples/: create_xlsx.rs
crates/duke-sheets/src/: calculation.rs  lib.rs  prelude.rs
crates/duke-sheets/tests/: formula_evaluation.rs  xlsx_formatting_roundtrip.rs  xlsx_roundtrip.rs  xlsx_style_roundtrip.rs
crates/excel-com-bridge/: Cargo.toml
crates/excel-com-bridge/src/: dispatch.rs  excel.rs  main.rs
crates/excel-com-protocol/: Cargo.toml
crates/excel-com-protocol/src/: lib.rs
crates/libreoffice-urp/: Cargo.toml
crates/libreoffice-urp/src/: connection.rs  error.rs  interface.rs  lib.rs  marshal.rs  protocol.rs  proxy.rs  transport.rs  types.rs
docs/: DXF_IMPLEMENTATION_PLAN.md
tests/fixtures/dxf/: Dockerfile  README.md  generate_fixtures.py  pyuno_framework.py  run_pyuno.sh
tests/fixtures/pyuno/: Dockerfile  framework.py  run.sh  verifier.py
tests/fixtures/pyuno/fixtures/: __init__.py  alignment.py  border_styles.py  comments.py  conditional_format.py  data_types.py  data_validation.py  fill_styles.py  font_styles.py  merged_cells.py  number_formats.py
