[package]
name = "duke-sheets-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for duke-sheets - high-performance Excel library"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "duke_sheets"
crate-type = ["cdylib"]

[dependencies]
duke-sheets = { path = "../../crates/duke-sheets", features = ["full"] }
duke-sheets-core = { path = "../../crates/duke-sheets-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }

[features]
default = []
