[package]
name = "duke-sheets-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core data structures for duke-sheets spreadsheet library"

[dependencies]
thiserror.workspace = true
ahash.workspace = true
chrono.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
