[package]
name = "duke-sheets-excel-com"
version = "0.1.0"
edition = "2021"
description = "Excel COM automation via WINE bridge — native Linux client library"

[dependencies]
excel-com-protocol = { path = "../excel-com-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
