[package]
name = "excel-com-bridge"
version = "0.1.0"
edition = "2021"
description = "Windows bridge process that automates Excel via COM, controlled over JSON stdio"

[[bin]]
name = "excel-com-bridge"
path = "src/main.rs"

[dependencies]
excel-com-protocol = { path = "../excel-com-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_Globalization",
]

# Use abort to avoid GCC unwinding dependency (llvm-mingw doesn't provide libgcc_eh)
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
